mengganti background red

--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
 		<p>Ini adalah sebuah paragraf</p>
 	</section>
 
-	<section>
+	<section class="background-red">
 		<h1>Judul 2 yang mengawali pertemuan ini</h1>
 		<p>Ini adalah sebuah paragraf</p>
 	</section>
